@@ -1,5 +1,13 @@
 2006-02-09  Guillem Jover  <guillem.jover@nokia.com>
 
+	* launcher/launcher.c: Remove <assert.h> include.
+	(assign_child_slot): Do not use assert, issue an error and call
+	invoked_send_fake_exit instead, even if this cannot happen! Move send
+	fake exit status logic to ...
+	(invoked_send_fake_exit): ... here. New function.
+
+2006-02-09  Guillem Jover  <guillem.jover@nokia.com>
+
 	* launcher/launcher.c (clean_childs): Print a newline when informing
 	of the child exit code.
 
